--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 				</configuration>
 			</plugin>
 
+		
 		</plugins>
 	</build>
 
@@ -105,10 +106,70 @@
                 <version>1.4.01</version>
             </dependency>
             <dependency> 
+  <groupId>org.apache.commons</groupId>
+  <artifactId>commons-io</artifactId> 
+  <version>1.3.2</version> 
+</dependency> 
+	<dependency> 
   <groupId>commons-io</groupId>
   <artifactId>commons-io</artifactId> 
   <version>2.4</version> 
-</dependency> 
+</dependency>
+		<!-- Selenium dependencies -->
+	<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-server</artifactId>
+    		<version>3.4.0</version>
+	</dependency>
+		
+	<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-java</artifactId>
+    		<version>3.4.0</version>
+	</dependency>
+		
+	<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-firefox-driver</artifactId>
+    		<version>3.4.0</version>
+	</dependency>
+		
+	<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-support</artifactId>
+    		<version>3.4.0</version>
+	</dependency>
+		
+	<!--<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium</artifactId>
+    		<version>2.0b3</version>
+	</dependency>-->
+		
+	<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-api</artifactId>
+    		<version>3.4.0</version>
+	</dependency>
+		
+	<!--<dependency>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-compiler-plugin</artifactId>
+  		<version>3.6.1</version>
+  	</dependency>-->
+		
+	<dependency>
+  		<groupId>org.apache.maven.surefire</groupId>
+  		<artifactId>surefire-junit4</artifactId>
+  		<version>2.12.4</version>
+	</dependency>
+
+	<dependency>
+      		<groupId>org.testng</groupId>
+      		<artifactId>testng</artifactId>
+     		 <version>6.9.8</version>
+    	</dependency>
+		
 		 
 
 	</dependencies>
